--- a/src/app/auth/sign-up/sign-up.html
+++ b/src/app/auth/sign-up/sign-up.html
@@ -1,3 +1,4 @@
+<!--All Components are tested-->
 <!--PrimeNG button component-->
 <p-button label="Check" />
 <!--Angular Material slide toggle component-->
