--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
 <router-outlet></router-outlet>
 
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <app-cart></app-cart>
-<app-home></app-home>
-<app-chef-dashboard></app-chef-dashboard>
-<app-chef-profile></app-chef-profile>
-<app-admin-dashboard></app-admin-dashboard>
-<app-order-management></app-order-management>
+<!-- <app-home></app-home> -->
+<!-- <app-chef-dashboard></app-chef-dashboard> -->
+<!-- <app-chef-profile></app-chef-profile> -->
+<!-- <app-admin-dashboard></app-admin-dashboard> -->
+<!-- <app-order-management></app-order-management>  -->
