lucide angular icons functionality fixed

--- a/src/app/chef/about/about.component.html
+++ b/src/app/chef/about/about.component.html
@@ -41,19 +41,19 @@
           <span>Italian Cuisine</span>
         </li>
         <li class="flex items-center">
-          <!-- <lucide-icon
+          <lucide-icon
             name="check"
             class="text-primary-green mr-2"
             size="18"
-          ></lucide-icon> -->
+          ></lucide-icon>
           <span>Vegetarian Dishes</span>
         </li>
         <li class="flex items-center">
-          <!-- <lucide-icon
+          <lucide-icon
             name="check"
             class="text-primary-green mr-2"
             size="18"
-          ></lucide-icon> -->
+          ></lucide-icon>
           <span>Desserts & Pastries</span>
         </li>
       </ul>
