--- a/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/cart/shopping-cart-item/shopping-cart-item.component.html
@@ -11,7 +11,7 @@
         (click)="cartService.removeItem(i)"
         class="text-gray-400 hover:text-red-500"
       >
-        <!-- <lucide-icon name="x" size="20"></lucide-icon> -->
+        <lucide-icon name="x" size="20"></lucide-icon>
       </button>
     </div>
 
