--- a/src/app/pages/chef-hero-section/chef-hero-section.component.html
+++ b/src/app/pages/chef-hero-section/chef-hero-section.component.html
@@ -14,12 +14,12 @@
 
     <div class="flex items-center gap-6 mb-6">
       <div class="flex items-center">
-        <!-- <lucide-icon
-              name="star"
-              class="text-amber-400"
-              fill="currentColor"
-              size="20"
-            ></lucide-icon> -->
+        <lucide-icon
+          name="star"
+          class="text-amber-400"
+          fill="currentColor"
+          size="20"
+        ></lucide-icon>
         <span class="ml-2 text-xl font-bold">{{
           chefProfileService.chef.rating
         }}</span>
@@ -28,11 +28,11 @@
         >
       </div>
       <div class="flex items-center">
-        <!-- <lucide-icon
-              name="clock"
-              class="text-primary-green"
-              size="20"
-            ></lucide-icon> -->
+        <lucide-icon
+          name="clock"
+          class="text-primary-green"
+          size="20"
+        ></lucide-icon>
         <span class="ml-2 text-gray-text">{{
           chefProfileService.chef.deliveryTime
         }}</span>
