--- a/src/app/pages/chef-reviews/chef-reviews.component.html
+++ b/src/app/pages/chef-reviews/chef-reviews.component.html
@@ -7,11 +7,11 @@
         class="text-amber-400"
       >
         ⭐
-        <!-- <lucide-icon
-                  name="star"
-                  [attr.fill]="star ? 'currentColor' : 'none'"
-                  size="16"
-                ></lucide-icon>  -->
+        <lucide-icon
+          name="star"
+          [attr.fill]="star ? 'currentColor' : 'none'"
+          size="16"
+        ></lucide-icon>
       </span>
     </div>
   </div>
