--- a/src/app/pages/home/food-category-card/food-category-card.component.html
+++ b/src/app/pages/home/food-category-card/food-category-card.component.html
@@ -4,11 +4,11 @@
   <div
     class="w-16 h-16 bg-primary-orange/10 rounded-full flex items-center justify-center mx-auto mb-4"
   >
-    <!-- <lucide-icon
-            [name]="category.icon"
-            class="text-primary-orange"
-            size="32"
-          ></lucide-icon> -->
+    <lucide-icon
+      [name]="category.icon"
+      class="text-primary-orange"
+      size="32"
+    ></lucide-icon>
   </div>
   <h3 class="text-xl font-bold text-dark-text mb-1">
     {{ category.name }}
