--- a/src/app/chef/chef-dashboard-order/chef-dashboard-order.component.html
+++ b/src/app/chef/chef-dashboard-order/chef-dashboard-order.component.html
@@ -26,7 +26,7 @@
   <div
     class="mt-3 pt-3 border-t border-gray-100 flex items-center text-gray-text text-sm"
   >
-    <!-- <lucide-icon name="clock" size="16"></lucide-icon> -->
+    <lucide-icon name="clock" size="16"></lucide-icon>
     <span class="ml-2">Preparation time: {{ order.time }}</span>
   </div>
 </div>
