--- a/src/app/chef/chef-dashboard-past-order/chef-dashboard-past-order.component.html
+++ b/src/app/chef/chef-dashboard-past-order/chef-dashboard-past-order.component.html
@@ -1,30 +1,33 @@
-       <div
-              class="border border-gray-100 rounded-xl p-4 hover:shadow-md transition-shadow"
-            >
-              <div class="flex justify-between">
-                <div>
-                  <h3 class="font-bold text-dark-text">
-                    {{ order.id }} • {{ order.customer }}
-                  </h3>
-                  <p class="text-gray-text text-sm">
-                    {{ order.items }} items • ${{ order.amount }}
-                  </p>
-                </div>
-                <span class="text-gray-text text-sm">{{ order.date }}</span>
-              </div>
-              <div class="mt-3 pt-3 border-t border-gray-100">
-                <div class="flex items-center">
-                  <div
-                    class="w-8 h-8 rounded-full bg-amber-400/10 flex items-center justify-center"
-                  >
-                    <!-- <lucide-icon name="star" class="text-amber-400" fill="currentColor" size="16"></lucide-icon> -->
-                  </div>
-                  <div class="ml-3">
-                    <p class="text-sm font-medium">Rated 5 stars</p>
-                    <p class="text-xs text-gray-text">
-                      "Delicious! Will order again"
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
+<div
+  class="border border-gray-100 rounded-xl p-4 hover:shadow-md transition-shadow"
+>
+  <div class="flex justify-between">
+    <div>
+      <h3 class="font-bold text-dark-text">
+        {{ order.id }} • {{ order.customer }}
+      </h3>
+      <p class="text-gray-text text-sm">
+        {{ order.items }} items • ${{ order.amount }}
+      </p>
+    </div>
+    <span class="text-gray-text text-sm">{{ order.date }}</span>
+  </div>
+  <div class="mt-3 pt-3 border-t border-gray-100">
+    <div class="flex items-center">
+      <div
+        class="w-8 h-8 rounded-full bg-amber-400/10 flex items-center justify-center"
+      >
+        <lucide-icon
+          name="star"
+          class="text-amber-400"
+          fill="currentColor"
+          size="16"
+        ></lucide-icon>
+      </div>
+      <div class="ml-3">
+        <p class="text-sm font-medium">Rated 5 stars</p>
+        <p class="text-xs text-gray-text">"Delicious! Will order again"</p>
+      </div>
+    </div>
+  </div>
+</div>
