--- a/src/app/navbar-component/navbar-component.html
+++ b/src/app/navbar-component/navbar-component.html
@@ -38,14 +38,14 @@
     <!-- Right Section -->
     <div class="flex items-center space-x-4">
       <button class="p-2 text-gray-700 hover:text-primary-orange">
-        <!-- <lucide-icon name="search" size="20"></lucide-icon> -->
+        <lucide-icon name="search" size="20"></lucide-icon>
       </button>
 
       <a
         routerLink="/cart"
         class="relative p-2 text-gray-700 hover:text-primary-orange"
       >
-        <!-- <lucide-icon name="shoppingCart" size="20"></lucide-icon> -->
+        <lucide-icon name="shoppingCart" size="20"></lucide-icon>
         <span
           *ngIf="cartCount > 0"
           class="absolute top-0 right-0 bg-primary-orange text-white text-xs rounded-full h-5 w-5 flex items-center justify-center"
@@ -55,7 +55,7 @@
       </a>
 
       <button class="p-2 text-gray-700 hover:text-primary-orange">
-        <!-- <lucide-icon name="user" size="20"></lucide-icon> -->
+        <lucide-icon name="user" size="20"></lucide-icon>
       </button>
 
       <!-- Mobile Menu Button -->
