--- a/src/app/pages/home/featured-chef-card/featured-chef-card.component.html
+++ b/src/app/pages/home/featured-chef-card/featured-chef-card.component.html
@@ -8,12 +8,12 @@
       </div>
       <div class="flex items-center bg-primary-green/10 px-2 py-1 rounded">
         <span class="text-primary-green font-bold">{{ chef.rating }}</span>
-        <!-- <lucide-icon
-                name="star"
-                class="text-amber-400 ml-1"
-                fill="currentColor"
-                size="16"
-              ></lucide-icon> -->
+        <lucide-icon
+          name="star"
+          class="text-amber-400 ml-1"
+          fill="currentColor"
+          size="16"
+        ></lucide-icon>
       </div>
     </div>
 
