--- a/src/app/pages/home/trending-dish-card/trending-dish-card.component.html
+++ b/src/app/pages/home/trending-dish-card/trending-dish-card.component.html
@@ -13,12 +13,12 @@
 
     <div class="mt-4 flex justify-between items-center">
       <div class="flex items-center">
-        <!-- <lucide-icon
-                name="star"
-                class="text-amber-400"
-                fill="currentColor"
-                size="16"
-              ></lucide-icon> -->
+        <lucide-icon
+          name="star"
+          class="text-amber-400"
+          fill="currentColor"
+          size="16"
+        ></lucide-icon>
         <span class="ml-1 text-gray-700">{{ dish.rating }}</span>
       </div>
       <button
