--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
-<!-- <app-navbar></app-navbar> -->
-<app-cart></app-cart>
+<!-- <app-navbar></app-navbar>-->
+<!--<app-cart></app-cart>-->
 <!-- <app-home></app-home> -->
 <!-- <app-chef-dashboard></app-chef-dashboard> -->
 <!-- <app-chef-profile></app-chef-profile> -->
